# pcl-project

./: .gitignore  README.md
cloud_sampling/source/: CMakeLists.txt  cloud_sampling.cpp
cloud_viewer/source/: cloud_viewer.cpp
concatenate_clouds/source/: concatenate_clouds.cpp
kdtree_search/source/: kdtree_search.cpp
octree_search/source/: octree_search.cpp
pcd_write/: pcd_write.cpp
pcl_filtering/1_passthrough/source/: passthrough.cpp
pcl_filtering/2_voxel_grid/source/: voxel_grid.cpp
pcl_filtering/3_statistical_removal/source/: statistical_removal.cpp
pcl_filtering/4_project_inliers/source/: project_inliers.cpp
pcl_filtering/5 extract_indices/source/: extract_indices.cpp
pcl_filtering/6_remove_outliers/source/: remove_outliers.cpp
pcl_filtering/7_CropHull/source/: CMakeLists.txt  crophull.cpp
pcl_icp/source/: CMakeLists.txt  main.cpp
pcl_plotter_demo/: pcl_plotter_demo.cpp
pcl_read/: CMakeLists.txt  pcd_read.cpp
pcl_registration/1_iterative_closest_point/source/: iterative_closest_point.cpp
pcl_registration/2_pairwise_incremental_registration/source/: CMakeLists.txt  pairwise_incremental_registration.cpp
pcl_registration/3_Interactive_Iterative_Closest_Point/source/: CMakeLists.txt
pcl_registration/4_normal_distributions_transform/source/: normal_distributions_transform.cpp
pcl_segmentation/1_plane_model_segmentation/source/: planar_segmentation.cpp
pcl_segmentation/2_cylinder_segmentation/source/: cylinder_segmentation.cpp
pcl_segmentation/2_cylinder_segmentation/source/result/: table_scene_mug_stereo_textured_cylinder.pcd
pcl_segmentation/3_cluster_extraction_no/: README.md
pcl_segmentation/3_cluster_extraction_no/source/: cluster_extraction.cpp
pcl_segmentation/4_region_growing_segmentation/source/: README.md  region_growing_segmentation.cpp
pcl_segmentation/4_region_growing_segmentation/source/README.assets/: Omega(.)  gif.latex
pcl_segmentation/5_color_based_region_growing_segmentation/source/: region_growing_rgb_segmentation.cpp
pcl_surface/1_resampling/source/: resampling.cpp
pcl_surface/2_concave_hull_2d/source/: concave_hull_2d.cpp
pcl_surface/3_greedy_projection/source/: greedy_projection.cpp
pcl_visualization/5qt_pcl/Source/another_example/src/: CMakeLists.txt  main.cpp  pclviewer.cpp  pclviewer.h
pcl_visualization/5qt_pcl/Source/build-pcl_visualizer-Desktop_Qt_5_13_2_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_pclviewer.h
pcl_visualization/5qt_pcl/Source/build-pcl_visualizer-Desktop_Qt_5_13_2_MSVC2017_64bit-Debug/debug/: moc_pclviewer.cpp  moc_predefs.h
pcl_visualization/5qt_pcl/Source/src/: .qmake.stash  CMakeLists.txt  pcl_visualizer.pro  pcl_visualizer.vcxproj  pcl_visualizer.vcxproj.filters  pclviewer.cpp
pcl_visualization/5qt_pcl/Source/src/debug/pcl_visualizer.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  pcl_visualizer.lastbuildstate  pcl_visualizer.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
pcl_visualization/5qt_pcl/Source/src/debug/qmake/: qtvars_x64_Debug.props
pcl_visualization/5qt_pcl/Source/src/debug/qmake/temp/: 7EC4B519-6372-31A7-99B2-D005C5D812D4.pcl_visualizer.designtime.idx  Makefile  props.txt
pcl_visualization/5qt_pcl/Source/src/release/: moc_pclviewer.cpp
pcl_visualization/5qt_pcl/Source/src/release/qmake/: qtvars_x64_Release.props
pcl_visualization/5qt_pcl/Source/src/release/qmake/temp/: 7EC4B519-6372-31A7-99B2-D005C5D812D4.pcl_visualizer.designtime.idx  Makefile
pcl_visualization/pcl_test4/: CMakeLists.txt  b2.pcd  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
pcl_visualizer_demo/: CMakeLists.txt  pcl_visualizer_demo.cpp
range_image_visualization/: CMakeLists.txt  range_image_visualization.cpp
